Adds social icons to footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
 <!-- Google Fonts -->
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Karla|Tinos|Leckerli+One|Sansita+One' rel='stylesheet' type='text/css'>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
 
 
 
@@ -132,9 +133,9 @@
 
       <div class="small-3 columns">
         <ul>PREPIFY</ul>
-          <li>Follow us on Twitter</li>
-          <li>Like us on Facebook</li>
-          <li>Read our blog</li>
+          <li><i class="fa fa-twitter"></i> Follow us on Twitter</li>
+          <li><i class="fa fa-facebook-square"></i> Like us on Facebook</li>
+          <li><i class="fa fa-rss-square"></i> Read our blog</li>
         </ul>
       </div>
       <div class="small-3 columns">
