--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -129,8 +129,6 @@
   </section>
   <footer id="footer">
     <div class="row">
-      <div class="large-6 columns"></div>
-
       <div class="small-3 columns">
         <ul>PREPIFY</ul>
           <li><i class="fa fa-twitter"></i> Follow us on Twitter</li>
@@ -140,12 +138,19 @@
       </div>
       <div class="small-3 columns">
         <ul>MORE RESOURCES</ul>
-          <li>College Board</li>
-          <li>Flash Cards</li>
-          <li>SAT info</li>
-          <li>More Stuff</li>
+          <li><i class="fa fa-long-arrow-right"></i> College Board</li>
+          <li><i class="fa fa-long-arrow-right"></i> Flash Cards</li>
+          <li><i class="fa fa-long-arrow-right"></i> SAT Info</li>
+          <li><i class="fa fa-long-arrow-right"></i> More Stuff</li>
         </ul>
       </div>
+
+      <div class="small-5 columns">
+        <ul><%= image_tag("Prepify_logo_white.png", size: "150", class:"logo")%>
+          <li>SAT prep for everyone</li>
+        </ul>
+      </ul>
+
     </div>
   </footer>  
 
