--- a/app/views/admin/subjects/_unpublish.html.erb
+++ b/app/views/admin/subjects/_unpublish.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, subject] do |f| %>
+<%= form_for [:admin, subject], remote: true do |f| %>
   <% if @subject.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@subject.errors.count, "error") %> prohibited this subject from being saved:</h2>
@@ -15,6 +15,6 @@
     <%= f.hidden_field(:published, :value => false) %>
   </div>
   <div class="large-5 columns actions">
-    <%= f.submit "Unpublish", class: 'tiny button' %>
+    <%= f.submit "Unpublish", class: 'change-published-status tiny button' %>
   </div>
 <% end %>
