--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -89,24 +89,12 @@
             </tr>
           </thead>
         
-          <tbody>
+          <tbody class="writing">
 
             <% @subjects.each do |subject| %>
               
-              <tr class='<%= subject.id %>'>
-              <% if subject.section == "Writing" %>
-                <td><%= subject.name %></td>
-                <td><%= link_to '<i class="fa fa-wrench"></i>'.html_safe, admin_subject_pages_path(subject) %></td> 
-                <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_path(subject), confirm: "Are you sure?", method: :delete, remote: true  %></td>
-                <td>
-                  <% if subject.published == false %>
-                    <%= render partial: 'publish', locals: {subject: subject} %>
-                  <% else %>
-                    <%= render partial: 'unpublish', locals: {subject: subject} %>
-                  <% end %>
-                </td>
-              </tr>
-            <% end %>
+              <% next if subject.section != "Writing" %>
+              <%= render 'admin/subjects/writing_row', subject: subject %>
             <%end%>
           </tbody>
         </table>
@@ -117,7 +105,7 @@
 
   <script type="text/javascript">
 
-// subjectinit.subjects();
+// subjinit.publish();
 
 </script>
   
