--- a/app/views/admin/subjects/index.js.erb
+++ b/app/views/admin/subjects/index.js.erb
@@ -1,16 +1,1 @@
-alert("huh");
-
-var subjectinit = {
-
-  subjects: function(){
-    alert('sss');
-    $('#new_math_lesson').click(function(e){
-    window.e = e;
-    $(e.target).hide().after("<%= j render partial: 'new_math_form', locals: {subject: @subject} %>");
-  
-    // (e.target).parentElement.show("<%= raw render partial: 'new_math_form', locals: {subject: @subject} %>");
-    
-
-  });
-  }
-}
+alert('fff');
