--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,20 +1,21 @@
-<link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
 
 <% content_for(:body_id, "subject")%> 
 
 
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.css" rel="stylesheet">
+
 
 <div class="panel">
   <div class="row">
-    <div class="large-4 centered columns ">      
+    <div class="large-4 small-3 centered columns ">      
         <h1 class="bottom-nav ">All Courses</h1>
     </div>
   </div>
 </div>
 
   <div class="row">         
-    <div class="large-4 columns centered ">
-      <%= image_tag("math.jpg")%>
+    <div class="large-4 small-6 columns centered ">
+      
       <div class="panel">        
         <h3><%= Subject.find(1).section %></h3>
         <h6 class="math-subheader">See Courses</h6>
@@ -26,10 +27,11 @@
       </div>
     </div>
     
-    <div class="large-4 columns centered">
-      <%= image_tag("math.jpg")%>
+    <div class="large-4 small-6 columns centered">
+      
       <div class="panel">
         <h3><%= Subject.find(2).section%></h3>
+
         <h6 class="reading-subheader">See Courses</h6>
         <div class="reading-slider" visibility: hidden>
           <% @read_subjects.each do |subject| %>
@@ -39,8 +41,9 @@
       </div>
     </div>
               
-    <div class="large-4 columns centered">
-      <%= image_tag("math.jpg")%>
+    <div class="large-4 small-6 columns centered">
+      
+     
       <div class="panel">
         <h3><%= Subject.find(3).section%></h3>
         <h6 class="writing-subheader">See Courses</h6>
@@ -52,6 +55,8 @@
       </div>
     </div>           
   </div>
+
+
   <!-- End Thumbnails -->
 
 <script type="text/javascript"> 
@@ -74,41 +79,7 @@
 
 
 
-
-  <!-- Footer -->
-<footer class="bottom">
-  <div class="row">
-    <div class="large-12 columns ">        
-          <div class="large-6 columns">            
-            <p class="bottom-nav">&copy; Copyright Prepify, LLC</p>
-          </div>
-          <div class="large-6 columns">
-            <ul class="inline-list right">
-              <li><h5 class="bottom-nav"><%= link_to 'Home', user_path(@user)%></h5><li><h5 class="bottom-nav">|</h5></li></li>
-              <li>
-                <h5 class="bottom-nav"><%= link_to 'Sign Out'%></h5> 
-                <li><h5 class="bottom-nav">|</h5></li>
-              </li>
-              <li>
-                <h5 class="bottom-nav"><%= link_to 'Courses'%></h5>                          
-                  <!-- <div class="subtext"><%= Subject.first.name %></div>
-                   <div class="subtext"><%= Subject.find(2).name %></div>
-                   <div class="subtext"><%= Subject.find(3).name %></div> -->               
-                <li><h5 class="bottom-nav">|</h5></li>
-              </li>
-              <li>
-                <h5 class="bottom-nav"><%= link_to 'Practice SAT'%></h5>
-              </li>
-            </ul>            
-          </div>        
-      </div>
-    </div>
-    
-  </div>
   
-  
-  </footer>
-
 
 
 
