--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -19,23 +19,10 @@
     
             <tbody>
 
-              <% @subjects.each do |subject| %>
-                
-                <tr class='<%= subject.id %>'>
-                <% if subject.section == "Math" %>
-                  <td class="word-wrap"><%= subject.name %></td>
-                  <td><%= link_to '<i class="fa fa-wrench"></i>'.html_safe, admin_subject_pages_path(subject) %></td> 
-                  <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_path(subject), data: {confirm: "Are you sure?"}, method: :delete, remote: true %></td>
-                  <td>
-                    <% if subject.published == false %>
-                      <%= render partial: 'publish', locals: {subject: subject} %>
-                    <% else %>
-                      <%= render partial: 'unpublish', locals: {subject: subject} %>
-                    <% end %>
-                  </td>
-                </tr>
+              <% @subjects.each do |subject| %>  
+               <% next if subject.section != "Math" %>
+               <%= render 'admin/subjects/math_row', subject: subject %>
               <% end %>
-              <%end%>
             </tbody>
           </table> 
         </div> 
@@ -56,22 +43,9 @@
           <tbody>
 
             <% @subjects.each do |subject| %>
-              
-              <tr class='<%= subject.id %>'>
-              <% if subject.section == "Critical Reading" %>
-                <td><%= subject.name %></td>
-                <td><%= link_to '<i class="fa fa-wrench"></i>'.html_safe, admin_subject_pages_path(subject) %></td> 
-                <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_path(subject), confirm: "Are you sure?", method: :delete, remote: true  %></td>
-                <td>
-                  <% if subject.published == false %>
-                    <%= render partial: 'publish', locals: {subject: subject} %>
-                  <% else %>
-                    <%= render partial: 'unpublish', locals: {subject: subject} %>
-                  <% end %>
-                </td>
-              </tr>
-            <% end %>
-          <%end%>
+              <% next if subject.section != "Critical Reading" %>
+               <%= render 'admin/subjects/reading_row', subject: subject %>
+              <%end%>
           </tbody>
         </table>
       </div> 
