--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
 <!-- Google Fonts -->
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Gochi+Hand|Karla|Leckerli+One|Sansita+One' rel='stylesheet' type='text/css'>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.css" rel="stylesheet">
 
 
 
