--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -5,19 +5,19 @@
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.css" rel="stylesheet">
 
 
-<div class="panel">
+<!-- <div class="panel"> -->
   <div class="row">
     <div class="large-4 small-3 centered columns ">      
         <h1 class="bottom-nav ">All Courses</h1>
     </div>
   </div>
-</div>
+<!-- </div> -->
 
   <div class="row">         
-    <div class="large-4 small-6 columns centered ">
+    <div class="large-4 columns centered ">
       
       <div class="panel">        
-        <h3><%= Subject.find(1).section %></h3>
+        <h3>Math</h3>
         <h6 class="math-subheader">See Courses</h6>
         <div class="math-slider" visibility: hidden>
           <% @math_subjects.each do |subject| %>
@@ -27,10 +27,10 @@
       </div>
     </div>
     
-    <div class="large-4 small-6 columns centered">
+    <div class="large-4 columns centered">
       
       <div class="panel">
-        <h3><%= Subject.find(2).section%></h3>
+        <h3>Reading</h3>
 
         <h6 class="reading-subheader">See Courses</h6>
         <div class="reading-slider" visibility: hidden>
@@ -41,11 +41,11 @@
       </div>
     </div>
               
-    <div class="large-4 small-6 columns centered">
+    <div class="large-4 columns centered">
       
      
       <div class="panel">
-        <h3><%= Subject.find(3).section%></h3>
+        <h3>Writing</h3>
         <h6 class="writing-subheader">See Courses</h6>
         <div class="writing-slider" visibility: hidden>
           <% @write_subjects.each do |subject| %>
