--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -16,7 +16,7 @@
     <div class="large-4 columns centered ">
       <%= image_tag("math.jpg")%>
       <div class="panel">        
-        <h3><%= Subject.find(1).section %></h3>
+        <h3>Math</h3>
         <h6 class="math-subheader">See Courses</h6>
         <div class="math-slider" visibility: hidden>
           <% @subjects.each do |subject| %>
