--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -34,11 +34,11 @@
               <td><% if page.pageable_type == "Question" %>
                 <%= link_to '<i class="fa fa-eye"> Preview</i>'.html_safe, admin_subject_question_path(@subject, page.pageable) %>
                 <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
-                <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_page_path(@subject, page), data: {confirm: "Are you sure?"}, method: :delete, remote: true %></td>
+                <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_page_path(@subject, page), data: {confirm: "Are you sure?"}, method: :delete, remote: true, title:"Delete Question Page" %></td>
                 <td><% elsif page.pageable_type == "Instruction" %>
                 <%= link_to '<i class="fa fa-eye"> Preview</i>'.html_safe, admin_subject_instruction_path(@subject, page.pageable) %>
                 <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
-                <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_page_path(@subject, page), data: {confirm: "Are you sure?"}, method: :delete, remote: true %></td>
+                <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_page_path(@subject, page), data: {confirm: "Are you sure?"}, method: :delete, remote: true, title:"Delete Instruction Page" %></td>
                 <% end %>
             </tr>
           <% end %>
