--- a/app/assets/stylesheets/subject.css.scss
+++ b/app/assets/stylesheets/subject.css.scss
@@ -10,58 +10,47 @@ background-size: 100% auto;
 		
 		
 
-		.ul-dash {
-		  margin: 0;
-		  font-color: #fff;
-		}
-
-		.ul-dash {
-		  margin-left: 0em;
-		  padding-left: 1.5em;
-		}
-
-		.ul-dash.hanging > li { /* remove '>' for IE6 support */
-		  padding-left: 1em;
-		  text-indent: -1em;
-		}  
-
-		
-
-
-	.top {
-		
-		.glowing-border {
-    		border: 2px solid #dadada;
-    		border-radius: 7px;
-		}
-
-		.glowing-border:focus { 
-    		outline: none;
-    		border-color: #9ecaed;
-    		box-shadow: 0 0 20px #9ecaed;
-		}
-		
-		label {
-			font-size: 1.20em;
-		}
-
-		p {
-			font-family: 'Leckerli One', cursive;
-			font-size: 2.25em;
-			color: white;
-			text-shadow:0px 0px 10px black;
-			text-align: center;
-		}
+	.ul-dash {
+	  margin: 0;
+	  font-color: #fff;
 	}
+
+	.ul-dash {
+	  margin-left: 0em;
+	  padding-left: 1.5em;
+	}
+
+	.ul-dash.hanging > li { /* remove '>' for IE6 support */
+	  padding-left: 1em;
+	  text-indent: -1em;
+	}  
+	
+	label {
+		font-size: 1.20em;
+	}
+
+	#course-list {
+		font-family: 'Covered By Your Grace', cursive;
+		color: black;
+		text-align: center;
+	}
+
+	.subtopic {
+		text-align: center;
+	}	
 
 	.subtext {
 		color: #656665;
 		font-size: 12px;
 	}
 	
-	h1, h2, h3, .bottom-nav {
+	h1, h2, .bottom-nav {
 		font-family: 'Sansita One';
-		color: $prepifycolor;
+		color: #2BA6CB;
+	}
+
+	h3 {
+		color: #38cbf4;
 	}
 	
 	.bottom .nav{
