--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -6,22 +6,19 @@
 
 
 <!-- <div class="panel"> -->
-  <div class="row">
-    <div class="large-4 small-3 centered columns ">      
-        <h1 class="bottom-nav ">All Courses</h1>
-    </div>
-  </div>
+
 <!-- </div> -->
 
   <div class="row">         
-    <div class="large-4 columns centered ">
+    <div class="large-4 columns centered">
       
-      <div class="panel">        
-        <h3>Math</h3>
-        <h6 class="math-subheader">See Courses</h6>
+      <div class="panel subtopic">        
+        <h1>Math</h1>
+        <h3><i class="fa fa-pencil-square-o fa-5x"></i></h3>
+        <h5 class="math-subheader">See Courses</h5>
         <div class="math-slider" visibility: hidden>
           <% @math_subjects.each do |subject| %>
-          <p><%= link_to "#{subject.name}", user_subject_path(current_user, subject.id)%></p>
+          <h6 id="course-list"><%= link_to "#{subject.name}", user_subject_path(current_user, subject.id)%></h6>
           <% end %> 
         </div>
       </div>
@@ -29,10 +26,10 @@
     
     <div class="large-4 columns centered">
       
-      <div class="panel">
+      <div class="panel subtopic">
         <h3>Reading</h3>
 
-        <h6 class="reading-subheader">See Courses</h6>
+        <h5 class="reading-subheader">See Courses</h5>
         <div class="reading-slider" visibility: hidden>
           <% @read_subjects.each do |subject| %>
           <p><%= link_to "#{subject.name}", user_subject_path(current_user, subject.id) %></p>
@@ -44,9 +41,9 @@
     <div class="large-4 columns centered">
       
      
-      <div class="panel">
+      <div class="panel subtopic">
         <h3>Writing</h3>
-        <h6 class="writing-subheader">See Courses</h6>
+        <h5 class="writing-subheader">See Courses</h5>
         <div class="writing-slider" visibility: hidden>
           <% @write_subjects.each do |subject| %>
           <p><%= link_to "#{subject.name}", user_subject_path(current_user, subject.id) %></p>
