--- a/app/views/instructions/show.html.erb
+++ b/app/views/instructions/show.html.erb
@@ -1,24 +1,32 @@
 <% content_for(:body_id, "lesson_pages") %> 
 
- <div class="panel">       
+       
     <div class="row">
       <h3><%= @subject.name %></h3>      
     </div>
-</div>
+
 
 <div class="row">
-  <div class="large-4 columns centered">
+  <div class="large-12 columns centered">
+    <div class="panel">
     <div class="field">
       <div class="subheader">
-  		<h6><%= @instruction.body %></h6> 
+  		<p><%= @instruction.body %>
+      orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p> 
       </div>
       <div class="slider"> 
       <img src="<%= @instruction.image %>" width="200" height="80">  
       </div>
         <%= progress_bar( progress(@page) )%>
         <hr>
-        <h5><%= link_to "Next Page", next_page(current_user, @page)%></h5>
-        <h5><%= link_to 'Previous Page',user_subjects_path(current_user, @page)%></h5>     
+      <div class="row">
+        <div class="small-9 large-10 columns">          
+          <h6 class="inline left"><a href="<%= previous_page(current_user, @page)%>"><i class="fa fa-arrow-circle-left"> </i> Back</a></h6>
+          <div class="small-4 small-offset-10">
+          <h6 class="inline right"><a href="<%=next_page(current_user, @page)%>">Next <i class="fa fa-arrow-circle-right"></i></a></h6>
+        </div>
+        </div>       
+       </div>
     </div>
   </div>
 </div>
