--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -5,11 +5,11 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>     
 
-      <div class="panel">
+      
         <div class="row">
           <h3><%= @subject.name %></h3>       
         </div>
-      </div>
+  
 
 <!-- End Header Content -->         
 
@@ -17,7 +17,7 @@
          <div class="large-4 columns centered">
           <ul class="pricing table">
             <div class="panel">
-              <h6><%= @question.body %></h6>
+              <h5><%= @question.body %></h5>
               <div class="field centered">
                 <div class="choices subheader ">
                   <% @question.choices.each do |choice| %>
@@ -36,17 +36,17 @@
                     <!-- <h5 class="center">Progress: <%= progress_bar(progress(@page))%></h5> -->
                   </div>
                     <div class="row">
-                    <h5 class="inline left"><%= link_to 'Next Page', next_page(current_user, @page)%></h5>         
-                     <h5 class="inline right"><%= link_to 'Previous Page',user_subjects_path(current_user, @page)%></h5>  
+                    <h6 class="inline left"><a href="<%= previous_page(current_user, @page)%>"><i class="fa fa-arrow-circle-left"></i> Back</a></h6>   
+
+                     <h6 class="inline right"><a href="<%= next_page(current_user, @page)%>"> Next <i class="fa fa-arrow-circle-right"></i></a></h6>  
                      </div>             
                   </div>      
-              </div>
-            </div> 
-            </ul>               
+                </div>
+              </div>                      
           </div>  
           </div>   
       
-    
+   
 
 <script type="text/javascript">	
 
