--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
 <% content_for(:body_id, "report")%> 
 <link rel="stylesheet" href="foundation-icons.css" />
 <link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
-<body>
+
 
 <!-- <div class="row">   -->      
   <!-- <div class="report"> -->
 		<!-- <div class="large-4 columns"> -->
     
 			<% if progress_report(@courses).empty? %>					
-    	<div class="panel">
+    <div class="panel report">
 	    	<div class="row"> 
     		 <h2 align="center">Get Started!</h2>  
     			<h3 align="center"><%= link_to "See Courses", user_subjects_path(current_user)%></h3>
@@ -16,8 +16,8 @@
     	</div>       
   		<% else%>
   		<div class="row">
-  		<div class="small-3 large-2 columns"></div>
-    		<div class="small-9 large-10 centered columns">
+  		<div class="arge-2 columns"></div>
+                    <div class="large-10 centered columns">
   	   	<h2><%= progress_report(@courses)%></h2> 
      	<% end %>   
       	</div>    
@@ -25,15 +25,11 @@
   </div>
 </div>
 
+   <div class="row">
+    <div class="large-12 centered columns">   
+      <h5 class="left"><a href="<%= users_path(current_user)%>"><i class="fa fa-arrow-circle-left"> </i> Back</a></h5>
+      <h5 class="right"><a href="<%= user_subjects_path(current_user)%>">Back to Lessons <i class="fa fa-arrow-circle-right"></i></a></h5>       
+      </div>      
+  </div>
 
 
-<div class="row">
-  <div class="columns large-12 large-centered">
-		<%= link_to 'Back', users_path%>
-		<%= link_to 'Back to Lessons', user_subjects_path(@user)%>
-	</div>
-</div>
-
-
-<i class="fi-[icon]"></i>
-</body>
