--- a/app/assets/stylesheets/lesson_pages.css.scss
+++ b/app/assets/stylesheets/lesson_pages.css.scss
@@ -62,11 +62,12 @@ background-size: 100% auto;
   font-size: .75em;
  }
 
- h2, h3, h4 {
+ h2, h3 {
  	font-family: 'Sansita One';
- 	color: white;
- 	text-shadow: black .1em .1em .2em;
+ 	color: $prepifycolor;
+ 	
  }
+ 
 
 
  h5, p {
