Changes see courses to explore

--- a/app/assets/stylesheets/subject.css.scss
+++ b/app/assets/stylesheets/subject.css.scss
@@ -32,8 +32,8 @@ background-size: 100% auto;
 		font-size: 1.20em;
 	}
 
-	#course-list {
-		font-family: 'Covered By Your Grace', cursive;
+	.course-list {
+		font-family: 'Source Sans Pro', cursive;
 		color: black;
 		text-align: center;
 	}
