--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -16,10 +16,10 @@
         <h1>Math</h1>
         <h3><i class="fa fa-superscript fa-3x"></i></h3>
          <p>They're creepy and they're kooky mysterious and spooky. They're all together ooky the Addams Family. You wanna be where you can see our troubles are all the same. You wanna be where everybody knows Your name. Straightnin' the curves. Flatnin' the hills Someday the mountain might get ‘em but the law never will.</p>
-        <h5 class="math-subheader">See Courses</h5>
+        <h5 class="math-subheader">Explore</h5>
         <div class="math-slider" visibility: hidden>
           <% @math_subjects.each do |subject| %>
-          <h6 id="course-list"><%= link_to "#{subject.name}", user_subject_path(current_user, subject.id)%></h6>
+          <h6 class="course-list"><%= link_to "#{subject.name}", user_subject_path(current_user, subject.id)%></h6>
           <% end %> 
         </div>
       </div>
@@ -31,10 +31,10 @@
         <h1>Reading</h1>
         <h3><i class="fa fa-book fa-3x"></i></h3>
         <p>Its mission - to explore strange new worlds to seek out new life and new civilizations to boldly go where no man has gone before. And when the odds are against him and their dangers work to do. You bet your life Speed Racer he will see it through.</p>
-        <h5 class="reading-subheader">See Courses</h5>
+        <h5 class="reading-subheader">Explore</h5>
         <div class="reading-slider" visibility: hidden>
           <% @read_subjects.each do |subject| %>
-          <p><%= link_to "#{subject.name}", user_subject_path(current_user, subject.id) %></p>
+          <h6 class="course-list"><%= link_to "#{subject.name}", user_subject_path(current_user, subject.id) %></h6>
           <% end %> 
         </div>
       </div>
@@ -47,10 +47,10 @@
         <h1>Writing</h1>
         <h3><i class="fa fa-pencil-square-o fa-3x"></i></h3>
         <p>Its mission - to explore strange new worlds to seek out new life and new civilizations to boldly go where no man has gone before. And when the odds are against him and their dangers work to do. You bet your life Speed Racer he will see it through.</p>
-        <h5 class="writing-subheader">See Courses</h5>
+        <h5 class="writing-subheader">Explore</h5>
         <div class="writing-slider" visibility: hidden>
           <% @write_subjects.each do |subject| %>
-          <p><%= link_to "#{subject.name}", user_subject_path(current_user, subject.id) %></p>
+          <h6 class="course-list"><%= link_to "#{subject.name}", user_subject_path(current_user, subject.id) %></h6>
           <% end %> 
         </div>
       </div>
