Add AJAX to page sequence and update sequence id in table upon dragging

--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -27,7 +27,7 @@
         </thead>
         <tbody id="sortable-pages">
           <% @subject.page_order.each do |page| %>
-            <tr data-page-id='<%= page.id %>' id="page_<%= page.id %>">
+            <tr data-page-id='<%= page.id %>' id="page_<%= page.id %>" class="hover-move">
               <td><%= page.sequence_id %></td>
               <td><%= page.pageable_type %></td>
               <td><%= page.body_snippet %></td>  
