--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -22,7 +22,10 @@
           <tr>
             <th>Sequence</th>
             <th>Page Type</th>
-            <th>Content</th>     
+            <th>Content</th> 
+            <th></th>
+            <th></th>
+
           </tr>
         </thead>
         <tbody id="sortable-pages">
@@ -31,13 +34,11 @@
               <td><%= page.sequence_id %></td>
               <td><%= page.pageable_type %></td>
               <td><%= page.body_snippet %></td>  
-              <td><% if page.pageable_type == "Question" %>
-                <%= link_to '<i class="fa fa-eye"> Preview</i>'.html_safe, admin_subject_question_path(@subject, page.pageable) %>
-                <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
+              <% if page.pageable_type == "Question" %>
+               <td> <%= link_to '<i class="fa fa-eye"> Preview</i>'.html_safe, admin_subject_question_path(@subject, page.pageable) %></td>
                 <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_page_path(@subject, page), data: {confirm: "Are you sure?"}, method: :delete, remote: true, title:"Delete Question Page" %></td>
-                <td><% elsif page.pageable_type == "Instruction" %>
-                <%= link_to '<i class="fa fa-eye"> Preview</i>'.html_safe, admin_subject_instruction_path(@subject, page.pageable) %>
-                <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
+                <% elsif page.pageable_type == "Instruction" %>
+               <td> <%= link_to '<i class="fa fa-eye"> Preview</i>'.html_safe, admin_subject_instruction_path(@subject, page.pageable) %></td>
                 <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_page_path(@subject, page), data: {confirm: "Are you sure?"}, method: :delete, remote: true, title:"Delete Instruction Page" %></td>
                 <% end %>
             </tr>
