--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -2,6 +2,14 @@
 background-color: white;
 background-image: url("retina_wood.png");
 	
+	.form, .formtitle {
+		max-width: 700px;
+	}
+
+	.form {
+		height: 200px;
+	}
+
 	.content {
 		background-color: white;
 		padding: 20px;
