--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New post</h1>
+<% content_for(:body_id, "blog")%> 
 
-<%= render 'form' %>
 
-<%= link_to 'Back', posts_path %>
+<div class="row">
+	<h1>New post</h1>
+	<%= render 'form' %>
+	<%= link_to 'Back', posts_path %>
+</div>
+
