Adds blog link to footer

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -25,6 +25,10 @@ html, body {
     line-height: 1.5em;
     padding-top: 20px;
 
+    a {
+        color: white;
+    }
+
     .columns {
         float:right
     }
