--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -134,7 +134,7 @@
         <ul>PREPIFY</ul>
           <li><i class="fa fa-twitter"></i> Follow us on Twitter</li>
           <li><i class="fa fa-facebook-square"></i> Like us on Facebook</li>
-          <li><i class="fa fa-rss-square"></i> Read our blog</li>
+          <li><i class="fa fa-rss-square"></i><%= link_to " Read our Blog", posts_path %></li>
         </ul>
       </div>
       <div class="small-3 columns">
