--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,11 +3,10 @@
 
 </Script>
 <div class="row content">
-<h1>Blog</h1>
   <% @posts.each do |post| %>
       <%= render :partial => post %>
       <% if current_user.admin? %>
-        <p><%= link_to 'View', post %> | <%= link_to 'Edit', edit_post_path(post) %> | <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+        <p><%= link_to 'Edit', edit_post_path(post) %> | <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></p>
       <% else %>
         <p><%= link_to 'View', post %></p>
       <% end %>
