fix all merge conflicts

--- a/app/assets/stylesheets/lesson_pages.css.scss
+++ b/app/assets/stylesheets/lesson_pages.css.scss
@@ -66,15 +66,18 @@ background-size: 100% auto;
   font-size: .75em;
  }
 
- h2, h3, h4 {
- .center-buttons {
+ h2, h3 {
+ 	color: $prepifycolor;
  	font-family: 'Sansita One';
+ 
+ .center-buttons { 	
  	color: white;
  	text-shadow: black .1em .1em .2em;
  }
 
+	
 
- h5, p {
+ h4, h5,h6, p {
  	color: #3E4040;
  	
  }
