fix index subject page

--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -15,7 +15,7 @@
       <div class="panel subtopic">        
         <h1>Math</h1>
         <h3><i class="fa fa-superscript fa-3x"></i></h3>
-         <p>They're creepy and they're kooky mysterious and spooky. They're all together ooky the Addams Family. You wanna be where you can see our troubles are all the same. You wanna be where everybody knows Your name. Straightnin' the curves. Flatnin' the hills Someday the mountain might get ‘em but the law never will.</p>
+         <p>They're creepy and they're kooky mysterious and spooky. They're all together ooky the Addams Family. You wanna be where you can see our troubles are all the same. You wanna be where everybody knows Your name. Straightnin' the curves.</p>
         <h5 class="math-subheader">Explore</h5>
         <div class="math-slider" visibility: hidden>
           <% @math_subjects.each do |subject| %>
