--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, "#{current_user.name}")%>
 <% content_for(:body_id, "report")%> 
 <link rel="stylesheet" href="foundation-icons.css" />
 <link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
