--- a/app/views/admin/subjects/_form.html.erb
+++ b/app/views/admin/subjects/_form.html.erb
@@ -18,8 +18,7 @@
     <%= f.label :name, "Title:" %><br>
     <%= f.text_field :name %>
   </div>
-  <div class="actions">
+  <div class="actions change-title">
     <%= f.submit class:'tiny button' %>
-     <%= link_to 'Back', admin_subject_pages_path(@subject), class:'tiny button' %>
   </div>
 <% end %>
