--- a/app/views/admin/instructions/show.html.erb
+++ b/app/views/admin/instructions/show.html.erb
@@ -20,7 +20,7 @@
     <br>
   </div>
   <%= link_to "Edit Content" , edit_admin_subject_instruction_path(@subject, @instruction), class:"button center-buttons" %></button>
-  <%= link_to "Back to #{@subject.name} page", admin_subject_pages_path(@subject), class:"button center-buttons" %>
+  <%= link_to "Back to #{@subject.name} Lesson", admin_subject_pages_path(@subject), class:"button center-buttons" %>
 </div>
 
 
