--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -36,7 +36,7 @@
         <!-- End Search Bar -->
         <!-- Thumbnails -->
           <%= link_to "Edit Question Content" , edit_admin_subject_question_path(@subject, @question), class:"button center-buttons" %> 
-          <%= link_to "Back to #{@subject.name} page", admin_subject_pages_path(@subject), class:"button center-buttons" %>
+          <%= link_to "Back to #{@subject.name} Lesson", admin_subject_pages_path(@subject), class:"button center-buttons" %>
           </div>
    
     
