--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -53,7 +53,7 @@
 
 	$('.submit').on("click", function(e){
 		// Grab value that user selected
-		var user_choice = $('.choice input:checked').val();
+		var user_choice = $('.choice input:checked').get();
 		// Compare with actual answer
 		if (user_choice == <%= @question.correct_answer%>){
 			$('.panel-notify').toggle();
