--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -31,7 +31,7 @@
                 <div class="submit">
                   <button class="button small" type="button">Check Answer</button> 
                 </div>
-                <div class="panel-notify" visibility: hidden>
+                <div class="panel-notify" style="display: none;">
                     <h4></h4>
                     <p></p>
                     <div class="row">
