update the jquery to prevent the default e

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -53,6 +53,7 @@
 <script type="text/javascript">	
 
 	$('.submit').on("click", function(e){
+    e.preventDefault();
 		// Grab value that user selected
 		var user_choice = $('.choice input:checked').val();
 		// Compare with actual answer
