--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -5,7 +5,7 @@
       <h1 class="page-title"><%= @subject.name %></h1>
       <div class="center-buttons">
           <a href="#" class="show-edit-title-form tiny button ">Edit Title</a>
-         <%= render 'admin/subjects/form', subject: @subject %>
+         <%= render 'admin/subjects/form', subject: @subject, id:"edit-title-form" %>
        </div>
     <!--   <div class#="center-buttons"><%#= link_to 'Edit Title', edit_admin_subject_path(@subject), class: 'tiny button' %> -->
      
