Remove 'Admin' from html

--- a/app/views/admin/users/_show.html.erb
+++ b/app/views/admin/users/_show.html.erb
@@ -1,7 +1,7 @@
 <tr data-user-id='<%= user.id %>'>
              <td>
                <% if user.admin? %>
-                 <%= user.name %> (Admin)
+                 <%= user.name %>
                <% else %>
                  <%= user.name %>
                <% end %>
