--- a/app/views/instructions/show.html.erb
+++ b/app/views/instructions/show.html.erb
@@ -18,7 +18,7 @@
       <div class="slider"> 
       <img src="<%= @instruction.image %>" width="200" height="80">  
       </div>
-        <%= progress_bar( progress(@page) )%>
+        <%#= progress_bar( progress(@page) )%>
         <hr>
       <div class="row">
         <div class="small-9 large-10 columns">          
