Add explanation field to admin question form

--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -26,9 +26,15 @@
     <%= f.text_area :text_choices %>
   </div>
   
+  
   <div class="field">
     <%= f.label :correct_answer%><br>
     <%= f.text_field :correct_answer %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :explanation%><br>
+    <%= f.text_field :explanation %>
   </div>
 
   <div class="actions">
