take out progress bar

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,14 +16,13 @@
     		</div>
     	</div>       
   		<% else%>
-  		<div class="row">
-  		<div class="arge-2 columns"></div>
-                    <div class="large-10 centered columns">
-  	   	<h2><%= progress_report(@courses)%></h2> 
+  		<div class="panel ">
+        <div class="row">             
+  	   	<%= progress_report(@courses)%>
      	<% end %>   
       	</div>    
     	</div>
-  </div>
+    </div>
 </div>
 
    <div class="row">
