Style edit devise profile

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -43,10 +43,17 @@ background-image: url("retina_wood.png");
   font-size: .75em;
  }
 
+.devise-form{
+	width:60%;
+}
 
+#center-title {
+	margin: auto;
+}
 
-
-
+.edit-form {
+	margin:auto;
+}
 
 
 
