update report card view

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
     		</div>
     	</div>       
   		<% else%>
-  		<div class="panel ">
+  		<!-- <div class="panel "> -->
         <div class="row">             
   	   	<%= progress_report(@courses)%>
      	<% end %>   
