--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,10 @@
           <li class="name">
             <%= image_tag("Prepify_logo_white.png", size: "100", class:"logo") %>
           </li>
+          <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
+          </li>
+
+         
         </ul>
         
         <section class="top-bar-section">
@@ -78,8 +82,11 @@
           <li class="name">
             <%= image_tag("Prepify_logo_white.png", size: "100", class:"logo") %>
           </li>
+          <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
+          </li>
         </ul>
         
+
         <section class="top-bar-section">
           <ul class="right">
             <li class="divider"></li>
