Update question params to include explanation

--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :body %><br>
+    <%= f.label :body, "Body:" %><br>
     <%= f.text_area :body %>
   </div> 
    
    <div class="field">
-    <%= f.label :image %><br>
+    <%= f.label :image, "Image:" %><br>
     <%= f.file_field :image %>
   </div>
 
@@ -28,12 +28,12 @@
   
   
   <div class="field">
-    <%= f.label :correct_answer%><br>
+    <%= f.label :correct_answer, "Correct Answer:"%><br>
     <%= f.text_field :correct_answer %>
   </div>
   
   <div class="field">
-    <%= f.label :explanation%><br>
+    <%= f.label :explanation, "Explanation:" %><br>
     <%= f.text_field :explanation %>
   </div>
 
