--- a/app/views/admin/instructions/_form.html.erb
+++ b/app/views/admin/instructions/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :body %><br>
+    <%= f.label :body, "Body:" %><br>
     <%= f.text_area :body %>
   </div>
 
   <div class="field">
-    <%= f.label :image %><br>
+    <%= f.label :image, "Image:" %><br>
     <%= f.file_field :image %>
   </div>
   
