update the lesson home page

--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -15,7 +15,10 @@
       <div class="panel subtopic">        
         <h1>Math</h1>
         <h3><i class="fa fa-superscript fa-3x"></i></h3>
-         <p>They're creepy and they're kooky mysterious and spooky. They're all together ooky the Addams Family. You wanna be where you can see our troubles are all the same. You wanna be where everybody knows Your name. Straightnin' the curves.</p>
+         <p>The following concepts are covered on the SAT:
+Arithmetic word problems (including percent, ratio, and proportion)
+properties of integers (even, odd, prime numbers, divisibility, etc.), rational numbers, sets (union, intersection, elements), counting techniques, sequences and series (including exponential growth), and
+elementary number theory</p>
         <h5 class="math-subheader">Explore</h5>
         <div class="math-slider" visibility: hidden>
           <% @math_subjects.each do |subject| %>
@@ -32,7 +35,7 @@
       <div class="panel subtopic">
         <h1>Reading</h1>
         <h3><i class="fa fa-book fa-3x"></i></h3>
-        <p>Its mission - to explore strange new worlds to seek out new life and new civilizations to boldly go where no man has gone before. And when the odds are against him and their dangers work to do. You bet your life Speed Racer he will see it through.</p>
+        <p>All critical reading questions on the SAT® are multiple-choice questions. Here is a breakdown of the question types, passage-based reading, sentence completions, vocabulary, and reasoning.</p>
         <h5 class="reading-subheader">Explore</h5>
         <div class="reading-slider" style="display: none;">
           <% @read_subjects.each do |subject| %>
@@ -50,7 +53,7 @@
       <div class="panel subtopic">
         <h1>Writing</h1>
         <h3><i class="fa fa-pencil-square-o fa-3x"></i></h3>
-        <p>Its mission - to explore strange new worlds to seek out new life and new civilizations to boldly go where no man has gone before. And when the odds are against him and their dangers work to do. You bet your life Speed Racer he will see it through.</p>
+        <p>Writing questions on the SAT® have two formats: a direct measure in the form of an essay and multiple-choice questions. Here is a breakdown of the questions, essay, multiple-choice, improve your sentence structure, identify your sentence errors, and improve your paragraph structure.</p>
         <h5 class="writing-subheader">Explore</h5>
         <div class="writing-slider" style="display: none;">
           <% @write_subjects.each do |subject| %>
