update the course main page

--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -17,8 +17,7 @@
         <h3><i class="fa fa-superscript fa-3x"></i></h3>
          <p>The following concepts are covered on the SAT:
 Arithmetic word problems (including percent, ratio, and proportion)
-properties of integers (even, odd, prime numbers, divisibility, etc.), rational numbers, sets (union, intersection, elements), counting techniques, sequences and series (including exponential growth), and
-elementary number theory</p>
+properties of integers (even, odd, prime numbers, divisibility, etc.), rational numbers, sets (union, and intersection.</p>
         <h5 class="math-subheader">Explore</h5>
         <div class="math-slider" visibility: hidden>
           <% @math_subjects.each do |subject| %>
@@ -53,7 +52,7 @@ elementary number theory</p>
       <div class="panel subtopic">
         <h1>Writing</h1>
         <h3><i class="fa fa-pencil-square-o fa-3x"></i></h3>
-        <p>Writing questions on the SAT® have two formats: a direct measure in the form of an essay and multiple-choice questions. Here is a breakdown of the questions, essay, multiple-choice, improve your sentence structure, identify your sentence errors, and improve your paragraph structure.</p>
+        <p>Writing questions on the SAT® have two formats: a direct measure in the form of an essay and multiple-choice questions. Here is a breakdown of the questions, essay, multiple-choice, improve your sentence structure.</p>
         <h5 class="writing-subheader">Explore</h5>
         <div class="writing-slider" style="display: none;">
           <% @write_subjects.each do |subject| %>
