updat the lesson home page

--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -34,7 +34,7 @@ properties of integers (even, odd, prime numbers, divisibility, etc.), rational 
       <div class="panel subtopic">
         <h1>Reading</h1>
         <h3><i class="fa fa-book fa-3x"></i></h3>
-        <p>All critical reading questions on the SAT® are multiple-choice questions. Here is a breakdown of the question types, passage-based reading, sentence completions, vocabulary, and reasoning.</p>
+        <p>All critical reading questions on the SAT® are multiple-choice questions. Here is a breakdown of the question types, passage-based reading, sentence completions, vocabulary, literal comprehensive and passage-based reasoning.</p>
         <h5 class="reading-subheader">Explore</h5>
         <div class="reading-slider" style="display: none;">
           <% @read_subjects.each do |subject| %>
