--- a/app/assets/stylesheets/subject.css.scss
+++ b/app/assets/stylesheets/subject.css.scss
@@ -13,6 +13,20 @@ background-size: 100% auto;
 		font-size: .8em;
 	}
 
+	.circular {
+		height: 200px;
+		width: 200px;
+		border-radius: 100px;
+		padding-left: 20px; 
+		text-align: center;
+		margin-left: 40px;
+		margin-bottom: 5px;
+
+	}
+	.icon {
+		padding-left: 20px;
+	}
+
 	.ul-dash {
 	  margin: 0;
 	  font-color: #fff;
@@ -35,11 +49,14 @@ background-size: 100% auto;
 	.course-list {
 		font-family: 'Source Sans Pro', cursive;
 		color: black;
-		text-align: center;
+		
 	}
 
 	.subtopic {
 		text-align: center;
+		p {
+			// background-color: #fff;
+		}
 	}	
 
 	.subtext {
@@ -70,7 +87,10 @@ background-size: 100% auto;
 	.radius {
 		border-radius: 10px;
 	}
-
+	
+	.math-slider, .reading-slider, .writing-slider {
+		text-align: left;
+	}
 	
 
 	.dash {
